ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Storage Execution
    • Fully Compatible
    • ALL
    • Execution Team 2024-06-24, Execution Team 2024-07-08, Execution Team 2024-07-22, Execution Team 2024-08-05, Execution Team 2024-08-19
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      To reproduce:

      db.createCollection("coll", {timeseries: {metaField: "meta", timeField : "time"}, collation: {locale: "en"}});

      and then run

      db.coll.runCommand("listIndexes")

       

       

      This behaviour diverges from a non-timeseries collection where the default _id index will use the collection's collation.

            Assignee:
            Stephanie Eristoff
            Reporter:
            Kshitij Gupta (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: