SERVER-89689: The default timeseries index does not use collection's collation if no collation is specified. (#23978)

GitOrigin-RevId: 211b95c8b9e5e8ef5608a810fd0f49f73df5fdc5