src/mongo/db/catalog/database_impl.h
@@ -118,6 +118,9 @@ public:
                                         const CollectionOptions& opts,
                                         const VirtualCollectionOptions& vopts) const final;
 
+    StatusWith<std::unique_ptr<CollatorInterface>> validateCollator(
+        OperationContext* opCtx, CollectionOptions& opts) const final;
+
     Status createView(OperationContext* opCtx,
                       const NamespaceString& viewName,
                       const CollectionOptions& options) const final;
